add sitemap generator

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build && node ./sitemap.js",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "postgenerate": "node ./sitemap.js"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
